# rust-in-action

./: README.md
actionkv/: 2  Cargo.toml  README.md  run-test
actionkv/src/: akv-mem.rs  lib.rs  main.rs
build-svg/: Cargo.toml  README.md
build-svg/src/: main0-basic.rs  main2-parallel-iterator.rs  main3-threadpool.rs
channels/: 2  Cargo.toml
channels/src/: main.rs
check-parity-bit/: Cargo.toml
check-parity-bit/src/: main.rs
clock/: Cargo.toml
clock/src/: main.rs
cpu-emulator/src/: main.rs
cube/src/: main.rs
decode-floating-num/: Cargo.toml
decode-floating-num/src/: main.rs
dyn-error/: Cargo.toml
dyn-error/src/: dyn-example.rs  main.rs  wrap-example.rs  wrap-example2.rs
file-basics/: Cargo.toml
file-basics/src/: main.rs
grep-lite/: README.md  cargo  input.txt
grep-lite/src/: main.rs
hexdump/src/: main.rs
http-request/: Cargo.toml
http-request/src/: main.rs
macgen/src/: main.rs
mandelbrot/src/: main.rs
memory-address/: Cargo.toml
memory-address/src/: main.rs
memory-info/: Cargo.toml
memory-info/src/: main.rs
memory/src/: main.rs
mget/: Cargo.toml
mget/src/: http.rs  main.rs
mock-rand/: Cargo.toml
mock-rand/src/: main.rs
new-type-pattern/: Cargo.toml
particles/: README.md  alloc.tsv
particles/src/: main.rs
q7/src/: main.rs
rpg-game/: Cargo.toml
rpg-game/src/: main.rs
rust-rule/: Cargo.toml
rust-rule/src/: main.rs
rust-tip/: Cargo.toml
rust-tip/src/: main.rs
serde-eg/: Cargo.toml
serde-eg/src/: main.rs
serde-json/: Cargo.toml
serde-json/src/: main.rs
smart-pointer/src/: main.rs
(+4 files in other folders)
