[package]
name = "mget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.6", features = [
  "proto-igmp",
  "proto-ipv4",
  "verbose",
  "log",
] }
trust-dns = { version = "0.16", default-features = false }
clap = "2"
rand = "0.7"
url = "2"
